--- a/client/src/Styles/landing.css
+++ b/client/src/Styles/landing.css
@@ -94,14 +94,9 @@ h1,h2,h2,h3,h4{
     height: 650px;
     
 }
-.Login-Form{
-  padding: 40px;
-  
-}
-.Login-form-elt{
-  margin-bottom: 2px;
- 
-}
+
+
+
 #btn-get-started{
     height: 50px;
     width: 150px;
@@ -229,9 +224,18 @@ h1,h2,h2,h3,h4{
     margin-bottom:0;
   }
 .login{
- 
+margin-top: 10%;
 border-radius: 29px;
+padding: 20px;
+margin-left:auto;
+margin-right: auto;
 background: linear-gradient(145deg, #cacaca, #f0f0f0);
 box-shadow:  50px 50px 100px #5a5a5a,
              -50px -50px 100px #ffffff;
+}
+.login-text-elt{
+  margin: 0px 0px 0px 200px;
+}
+input:focus{
+  background-color: red;
 }
