--- a/client/src/Styles/landing.css
+++ b/client/src/Styles/landing.css
@@ -10,6 +10,16 @@ html, body{
 h1,h2,h2,h3,h4{
     text-transform: capitalize;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 .line{
    
@@ -227,15 +237,15 @@ h1,h2,h2,h3,h4{
 margin-top: 10%;
 border-radius: 29px;
 padding: 20px;
+max-width: 25%;
 margin-left:auto;
 margin-right: auto;
 background: linear-gradient(145deg, #cacaca, #f0f0f0);
-box-shadow:  50px 50px 100px #5a5a5a,
-             -50px -50px 100px #ffffff;
+border-radius: 50px;
+background: #e0e0e0;
+box-shadow:  -20px -20px 60px #bebebe,
+             20px 20px 60px #ffffff;
 }
 .login-text-elt{
   margin: 0px 0px 0px 200px;
-}
-input:focus{
-  background-color: red;
 }
