--- a/client/src/Styles/landing.css
+++ b/client/src/Styles/landing.css
@@ -15,6 +15,9 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.heightmanip{
+  margin:1000px 0px 0px 0px;
+}
 
 /* Firefox */
 input[type=number] {
