--- a/client/src/Styles/dashboard.css
+++ b/client/src/Styles/dashboard.css
@@ -20,3 +20,10 @@ body,html{
 .secondary{
         color: rgb(153, 153, 153);
 }
+.Navcontainer{
+    height: 100vh;
+    position: sticky;
+    background: #FFFFFF;
+    box-shadow:  20px 20px 60px #d9d9d9,
+                 -20px -20px 60px #ffffff;
+}
