--- a/client/src/Styles/landing.css
+++ b/client/src/Styles/landing.css
@@ -100,7 +100,7 @@ input[type=number] {
     height: 650px;
 } */
 .LandingImage{
-    background-image: linear-gradient(to right, rgba(3,3,4,1),rgba(66,105,158,0.4)  ) ,url('../LandingBody/projectTeam.jpg');
+    background-image: linear-gradient(to right, rgba(3,3,4,1),rgba(66,105,158,0.4)  ) ,url('../Assets/projectTeam.jpg');
     background-size: cover;
     /* height: 65% !important; */
     width: 100%;
@@ -244,10 +244,10 @@ max-width: 25%;
 margin-left:auto;
 margin-right: auto;
 background: linear-gradient(145deg, #cacaca, #f0f0f0);
-border-radius: 50px;
-background: #e0e0e0;
-box-shadow:  -20px -20px 60px #bebebe,
-             20px 20px 60px #ffffff;
+border-radius: 20px;
+background: #FFFFFF;
+box-shadow:  20px 20px 60px #d9d9d9,
+             -20px -20px 60px #ffffff;
 }
 .login-text-elt{
   margin: 0px 0px 0px 200px;
