--- a/client/src/Styles/landing.css
+++ b/client/src/Styles/landing.css
@@ -7,6 +7,11 @@ html, body{
      
      
 }
+.header{
+  margin: 0px 0px   0px 55px;
+
+}
+
 h1,h2,h2,h3,h4{
     text-transform: capitalize;
 }
@@ -34,7 +39,10 @@ input[type=number] {
 .container{
     margin: 40px;
     
+
+    
 }
+
 /* #root{
     overflow-x: hidden;
 } */
@@ -55,6 +63,10 @@ input[type=number] {
 }
 .cardH{
     height:100px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    
+
 }
 .flexlist{
     display: -webkit-flex; 
@@ -76,7 +88,7 @@ input[type=number] {
     font-size: 20px;
     font-weight: 200;
     padding: 0px;
-    max-width:800px ;
+    max-width:1000px ;
 }
 .intro-h1{
     color: #fff;
@@ -251,4 +263,9 @@ box-shadow:  20px 20px 60px #d9d9d9,
 }
 .login-text-elt{
   margin: 0px 0px 0px 200px;
+}
+.forgotPass{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+  rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  
 }
