--- a/developerui/src/Styles/dashboard.css
+++ b/developerui/src/Styles/dashboard.css
@@ -1,29 +1,56 @@
-body,html{
-    margin: 0px;
-    padding: 0px;
+body,
+html {
+  margin: 0px;
+  padding: 0px;
 }
-#btn-get-started{
-    height: 50px;
-    width: 150px;
-    cursor: Pointer;
-    font-family: Oxygen;
-    border: 1px solid #fff;
-    background-color: rgba(66,105,158);
-    color: #fff;
-    
+#btn-get-started {
+  height: 50px;
+  width: 150px;
+  cursor: Pointer;
+  font-family: Oxygen;
+  border: 1px solid #fff;
+  background-color: rgba(66, 105, 158);
+  color: #fff;
 }
-.summary > h3,h5,button{
-    margin: 0px 0px 0px 5px;
-    
-}
-
-.secondary{
-        color: rgb(153, 153, 153);
-}
-.Navcontainer{
-   
-    background: #FFFFFF;
-    box-shadow:  20px 20px 60px #d9d9d9,
-                 -20px -20px 60px #ffffff;
+.summary > h3,
+h5,
+button {
+  margin: 0px 0px 0px 5px;
 }
 
+.secondary {
+  color: rgb(153, 153, 153);
+}
+.Navcontainer {
+  background: #e0e0e0;
+  box-shadow: 25px 25px 51px #868686, -25px -25px 51px #ffffff;
+}
+.NavItem {
+  color: #fff !important;
+}
+.NavItem:hover {
+  color: rgba(66, 105, 158) !important;
+  background-color: #fff !important;
+}
+
+.customBoard {
+  padding: 20px;
+  background-color: #ececec;
+  width: 30%;
+  float: left;
+}
+.customBoardItem {
+  margin: 0px 0px 8px 0px;
+  padding: 5px 0px 0px 8px;
+}
+.doneBoard {
+  margin-left: 10px;
+  padding: 20px;
+  background-color: #ececec;
+  width: 30%;
+  float: left;
+}
+.doneBoardItem {
+  margin: 0px 0px 8px 0px;
+  padding: 5px 0px 0px 8px;
+}
