--- a/client/src/Styles/landing.css
+++ b/client/src/Styles/landing.css
@@ -1,12 +1,17 @@
 html, body{
+    font-family: Montserrat;
     height:100%;
     width:100%;
     padding: 0px;
     margin: 0px;
-     scroll-behavior: smooth; 
-     
+     scroll-behavior: smooth;     
      
 }
+
+.font-link {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .header{
   margin: 0px 0px   0px 55px;
 
@@ -122,10 +127,11 @@ input[type=number] {
 
 
 #btn-get-started{
-    height: 50px;
-    width: 150px;
+    height: 80px;
+    width: 240px;
+    font-size: 28px;
+    font-weight: 700;
     cursor: Pointer;
-    font-family: Oxygen;
     border: 1px solid #fff;
     background-color: rgba(66,105,158);
     color: #fff;
@@ -133,7 +139,7 @@ input[type=number] {
 }
 #btn-get-started:hover{
     border: 2px solid rgba(66,105,158);
-    font-weight: 700;
+    font-weight: 900;
     background-color: #fff;
     color: rgba(66,105,158);
 }
@@ -267,4 +273,41 @@ box-shadow:  20px 20px 60px #d9d9d9,
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
   rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   
+}
+.hhh1{
+  display: flex;
+  justify-content: center;
+}
+.texty{
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+}
+.conty{
+  text-align: center;
+}
+.log{
+  border-radius: 29px;
+  padding: 20px;
+  max-width: 25%;
+  margin-left:auto;
+  margin-right: auto;
+  background: linear-gradient(145deg, #cacaca, #f0f0f0);
+  border-radius: 20px;
+  background: #FFFFFF;
+  box-shadow:  20px 20px 60px #d9d9d9,
+               -20px -20px 60px #ffffff;
+  }
+.logs{
+  margin-top: 5%;
+  border-radius: 29px;
+  padding: 20px;
+  max-width: 25%;
+  margin-left:auto;
+  margin-right: auto;
+  background: linear-gradient(145deg, #cacaca, #f0f0f0);
+  border-radius: 20px;
+  background: #FFFFFF;
+  box-shadow:  20px 20px 60px #d9d9d9,
+               -20px -20px 60px #ffffff;
 }
